--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
-  cloud_firestore: ^5.5.0
+  firebase_auth: ^5.3.3
   firebase_core: ^3.8.0
+  cloud_firestore: ^5.5.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
